--- a/Lesson 2/index2.html
+++ b/Lesson 2/index2.html
@@ -1,47 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&family=Oxanium:wght@200..800&display=swap" rel="stylesheet">
   <style>
-    *{
+    * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      font-family: Verdana, Geneva, Tahoma, sans-serif;
+      font-family: "Oxanium", sans-serif;
+      /* font-family: "Orbitron", sans-serif; */
     }
-    body{
+
+    body {
       background-color: black;
     }
-    nav{
+
+    nav {
       display: flex;
       justify-content: space-between;
       align-items: center;
+      flex-wrap: wrap;
       padding: 20px 50px;
       background-color: #333;
-      h2{
+
+      h2 {
         color: white;
       }
     }
-    .navigation-links{
+
+    .navigation-links {
       display: flex;
       gap: 50px;
-      a{
+
+      a {
         color: white;
         text-decoration: none;
       }
     }
-    h1{
+
+    h1 {
       position: absolute;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
       color: white;
-      font-size: 100px;
+      font-size: 6rem;
     }
   </style>
 </head>
+
 <body>
 
   <nav>
@@ -54,8 +67,10 @@
     </div>
   </nav>
   <h1>Ahmadaims</h1>
-  
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.7/gsap.min.js" integrity="sha512-f6bQMg6nkSRw/xfHw5BCbISe/dJjXrVGfz9BSDwhZtiErHwk7ifbmBEtF9vFW8UNIQPhV2uEFVyI/UHob9r7Cw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.7/gsap.min.js"
+    integrity="sha512-f6bQMg6nkSRw/xfHw5BCbISe/dJjXrVGfz9BSDwhZtiErHwk7ifbmBEtF9vFW8UNIQPhV2uEFVyI/UHob9r7Cw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script>
     var tl = gsap.timeline();
     tl.from("h2", {
@@ -78,4 +93,5 @@
     })
   </script>
 </body>
+
 </html>
